--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.7.0",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "puppeteer": "^23.7.1"
   }
 }
