--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.9.2",
     "morgan": "~1.9.1",
     "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
